--- a/static/styles.css
+++ b/static/styles.css
@@ -35,7 +35,7 @@ username {
 
 signout {
     padding: 10px;
-    color:rgb(117, 151, 196)
+    color:rgb(76, 109, 151);
 }
 
 stories {
@@ -56,7 +56,7 @@ stories img {
 
 person{
     font-size: 11px;
-    color: rgb(146, 146, 146);
+    color: rgb(90, 90, 90);
     display: inline-block;
     margin: 8px;
     text-align: center;
@@ -98,26 +98,35 @@ i {
     font-weight: bold;
 }
 
-p.comment {
+.num_comments {
+    margin: 10px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    color:rgb(76, 109, 151);
+}
+
+.title {
+    margin: 10px; 
+    display: inline-block;
+}
+
+#comment_user {
     margin-left: 10px;
-    display: inline;
+}
+
+p.comment {
+    width: 500px;
+    display: inline-block;
+    margin: 10px;
 }
 
 #more {
-    color:rgb(117, 151, 196);
-}
-
-p.comment2 {
-    margin: 10px;
-}
-
-p.comment3 {
-    margin: 10px;
+    color:rgb(76, 109, 151);
 }
 
 p.time {
     margin: 10px;
-    color: rgb(156, 156, 156);
+    color: rgb(90, 90, 90);
 }
 
 commentbar {
@@ -168,13 +177,14 @@ profile {
 }
 
 profiles {
-    margin: 5px;
+    margin: 0px;
     display: flex;
 }
 
 #suggestions {
-    margin: 15px;
-    color: rgb(145, 145, 145);
+    margin: 10px;
+    margin-bottom: 0px;
+    color: rgb(90, 90, 90);
     font-size: 20px;
 }
 
@@ -196,7 +206,7 @@ suggestionsprof p {
 follow {
     margin-left: auto;
     margin: 10px;
-    color:rgb(117, 151, 196);
+    color:rgb(76, 109, 151);
 }
 
 top {
@@ -205,7 +215,7 @@ top {
 }
 
 .suggestions {
-    color: gray;
+    color: rgb(90, 90, 90);
 }
 
 storyphoto {
