--- a/templates/starter-client.html
+++ b/templates/starter-client.html
@@ -14,7 +14,7 @@
     {% include 'includes/navbar.html'  %}
 
     <aside class="sidebar">
-        <header class="profile">
+        <header class="profile" style="margin-top: 50px;">
             <!-- user profile rendered client-side -->
         </header>
         <div class="suggestion-block">
