--- a/static/css/jonah-photo-app.css
+++ b/static/css/jonah-photo-app.css
@@ -5,7 +5,33 @@ body {
     background-color: rgb(233, 233, 233);
 }
 
-navbar {
+nav {
+    padding: 10px;
+    position: fixed;
+    height: 70px;
+    width: 100vw;
+    background-color: white;
+    border-bottom: solid #dbdbdb 1px;
+    left: 0px;
+    top: 0px;
+    padding: 0px 3vw;
+    display: flex;
+    align-items: center;
+}
+
+ul {
+    margin-left: 60vw;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    list-style-type: none;
+}
+
+li {
+    margin-left: 10px;
+}
+
+/* navbar {
     font-family: Arial, Helvetica, sans-serif;
     padding: 5px;
     border: rgba(150, 150, 150) 1px;
@@ -36,7 +62,7 @@ username {
 signout {
     padding: 10px;
     color:rgb(76, 109, 151);
-}
+} */
 
 .stories {
     display: inline;
